<resources>
    <string name="app_name">Court Counter</string>
    <string name="teamA">Team A</string>
    <string name="players_7">Players = 7</string>
    <string name="ql_1">QL+1</string>
    <string name="b_1">B+1</string>
    <string name="raider_score">Raider Score</string>
    <string name="team_a_tackle">Team A Tackle</string>
    <string name="empty_raid">Empty Raid</string>
    <string name="team_b">Team B</string>
    <string name="team_b_tackle">Team B Tackle</string>
    <string name="oops">oops!</string>
    <string name="reset">reset</string>
    <string name="match_over">Match Over!</string>
</resources>
